test/spec/block.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/block.wast
(;; STDOUT ;;;
out/test/spec/block.wast:159: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:163: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:167: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:171: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:176: assert_invalid passed:
  error: type mismatch in block, expected [] but got [i32]
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:182: assert_invalid passed:
  error: type mismatch in block, expected [] but got [i64]
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:188: assert_invalid passed:
  error: type mismatch in block, expected [] but got [f32]
  000001f: error: OnEndExpr callback failed
out/test/spec/block.wast:194: assert_invalid passed:
  error: type mismatch in block, expected [] but got [f64]
  0000023: error: OnEndExpr callback failed
out/test/spec/block.wast:201: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/block.wast:207: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/block.wast:213: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/block.wast:219: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/block.wast:226: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:232: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:238: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:244: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:251: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got [i64]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:257: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got [f32]
  0000020: error: OnEndExpr callback failed
out/test/spec/block.wast:263: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got [f64]
  0000024: error: OnEndExpr callback failed
out/test/spec/block.wast:269: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got [i32]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:275: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got [f32]
  0000020: error: OnEndExpr callback failed
out/test/spec/block.wast:281: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got [f64]
  0000024: error: OnEndExpr callback failed
out/test/spec/block.wast:287: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got [i32]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:293: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got [i64]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:299: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got [f64]
  0000024: error: OnEndExpr callback failed
out/test/spec/block.wast:305: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got [i32]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:311: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got [i64]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:317: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got [f32]
  0000020: error: OnEndExpr callback failed
out/test/spec/block.wast:324: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [i64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:330: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [f32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:336: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [f64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:342: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got [i32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:348: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got [f32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:354: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got [f64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:360: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got [i32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:366: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got [i64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:372: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got [f64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:378: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got [i32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:384: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got [i64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:390: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got [f32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:397: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:403: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:409: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:415: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:422: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:428: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:434: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:440: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:447: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:453: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:459: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:465: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:472: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:478: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:484: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:490: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:496: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:502: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:508: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:514: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:520: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:526: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:532: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:538: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:545: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:551: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:557: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:563: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:570: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:576: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:582: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:588: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:594: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:600: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:606: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:612: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:618: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:624: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:630: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:636: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:643: assert_invalid passed:
  error: type mismatch in function, expected [] but got [i32]
  0000024: error: EndFunctionBody callback failed
out/test/spec/block.wast:649: assert_invalid passed:
  error: type mismatch in function, expected [] but got [i64]
  0000024: error: EndFunctionBody callback failed
out/test/spec/block.wast:655: assert_invalid passed:
  error: type mismatch in function, expected [] but got [f32]
  0000027: error: EndFunctionBody callback failed
out/test/spec/block.wast:661: assert_invalid passed:
  error: type mismatch in function, expected [] but got [f64]
  000002b: error: EndFunctionBody callback failed
out/test/spec/block.wast:668: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:674: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:680: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:686: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:693: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/block.wast:699: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/block.wast:705: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/block.wast:711: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/block.wast:718: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:726: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f32]
  0000023: error: OnBrExpr callback failed
out/test/spec/block.wast:734: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f64]
  0000027: error: OnBrExpr callback failed
out/test/spec/block.wast:742: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [i32]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:750: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f32]
  0000023: error: OnBrExpr callback failed
out/test/spec/block.wast:758: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f64]
  0000027: error: OnBrExpr callback failed
out/test/spec/block.wast:766: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i32]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:774: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i64]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:782: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [f64]
  0000027: error: OnBrExpr callback failed
out/test/spec/block.wast:790: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i32]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:798: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i64]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:806: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [f32]
  0000023: error: OnBrExpr callback failed
out/test/spec/block.wast:815: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  000001e: error: OnUnaryExpr callback failed
out/test/spec/block.wast:821: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  000001e: error: OnUnaryExpr callback failed
out/test/spec/block.wast:827: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  000001e: error: OnUnaryExpr callback failed
out/test/spec/block.wast:833: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  000001e: error: OnUnaryExpr callback failed
out/test/spec/block.wast:840: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  000001f: error: OnUnaryExpr callback failed
out/test/spec/block.wast:846: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  000001f: error: OnUnaryExpr callback failed
out/test/spec/block.wast:852: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  000001f: error: OnUnaryExpr callback failed
out/test/spec/block.wast:858: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  000001f: error: OnUnaryExpr callback failed
out/test/spec/block.wast:865: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:871: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  0000023: error: OnUnaryExpr callback failed
out/test/spec/block.wast:877: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  0000027: error: OnUnaryExpr callback failed
out/test/spec/block.wast:883: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:889: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  0000023: error: OnUnaryExpr callback failed
out/test/spec/block.wast:895: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  0000027: error: OnUnaryExpr callback failed
out/test/spec/block.wast:901: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:907: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:913: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  0000027: error: OnUnaryExpr callback failed
out/test/spec/block.wast:919: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:925: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:931: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  0000023: error: OnUnaryExpr callback failed
out/test/spec/block.wast:938: assert_malformed passed:
  out/test/spec/block/block.125.wat:1:17: error: unexpected label "$l"
  (func block end $l)
                  ^^
out/test/spec/block.wast:942: assert_malformed passed:
  out/test/spec/block/block.126.wat:1:20: error: mismatching label "$a" != "$l"
  (func block $a end $l)
                     ^^
140/140 tests passed.
;;; STDOUT ;;)
